--- a/BookChain/BookChain/templates/requested-books.html
+++ b/BookChain/BookChain/templates/requested-books.html
@@ -27,8 +27,8 @@
 
         <!-- Search form -->
         <form class="form-inline d-flex justify-content-center md-form form-sm active-cyan-2 mt-2" action="#" onsubmit="handle" method="post">
-            {{search_box_form.hidden_tag() }}
-            {{search_box_form.search(class='form-control form-control-underlined',**{'placeholder':'Busqueda'})}}
+            {{forms['search_box_form'].hidden_tag() }}
+            {{forms['search_box_form'].search(class='form-control form-control-underlined',**{'placeholder':'Busqueda'})}}
             <div class="nav-states">
                 <ul>
                     <li>Disponible</li>
@@ -38,7 +38,7 @@
             </div>
         </form>
     </div>
-    {{ macros.render_books(books,get_request,constants,my_books,requested_books,evaluate_request_form,get_lang,get_genre) }}
+    {{ macros.render_books(books,get_request,constants,my_books,requested_books,forms,get_lang,get_genre) }}
 </div>
 
 
