--- a/BookChain/BookChain/templates/index.html
+++ b/BookChain/BookChain/templates/index.html
@@ -25,6 +25,6 @@
         </form>
 
     </div>
-    {{ macros.render_books(books,None,constants,my_books,requested_books,forms,get_lang,get_genre) }}
+    {{ macros.render_books(books,None,constants,my_books,requested_books,forms,get_lang,get_genre,None) }}
 </div>
     {% endblock %}
