--- a/BookChain/BookChain/templates/books.html
+++ b/BookChain/BookChain/templates/books.html
@@ -36,19 +36,14 @@
                     <li><a href="#" onclick="filterCards(2)">Solicitados</a></li>
                     <li><a href="#" onclick="filterCards(3)">Prestados</a></li>
                     <li><a href="#" onclick="filterCards(4)">Todos</a></li>
-                    <!-- var divsToHide = document.getElementsByClassName("card border-success mb-3"); //divsToHide is an array
-     for(var i = 0; i < divsToHide.length; i++){
-     divsToHide[i].style.opacity = 0.3; // or
-
-     }-->
-                    <!--document.getElementsByClassName('card border-success mb-3')[1].style.opacity = 0.3;-->
+                    
                 </ul>
             </div>
         </form>
 
 
     </div>
-    {{ macros.render_books(books,get_request,constants,my_books,requested_books,forms,get_lang,get_genre) }}
+    {{ macros.render_books(books,get_request,constants,my_books,requested_books,forms,get_lang,get_genre,get_rating) }}
 </div>
 
 
