--- a/BookChain/BookChain/templates/newbook.html
+++ b/BookChain/BookChain/templates/newbook.html
@@ -11,10 +11,86 @@
     </div>
 </div>
 <div id="middlebox">
-    <div class="jumbotron">
+    <div >
         <div class="container">
-            <h3>Registrar Libro</h3>
-            {{wtf.quick_form(book_form)}}
+            <h3>Registro de Libro</h3>
+
+
+
+            <form method="post" action="" class="form">
+                <div id="book_data">
+
+                    {{ book_form.hidden_tag() }}
+                    {{book_form.name.label(class='sr-only')}}
+                    {{book_form.name(class='form-control',**{'placeholder':'Nombre','id':'name'})}}
+                    <br />
+                    {{book_form.description.label(class='sr-only')}}
+                    {{book_form.description(class='form-control',**{'placeholder':'Descripion','id':'description'})}}
+                    <br />
+                    {{book_form.page_count.label(class='sr-only')}}
+                    {{book_form.page_count(class='form-control',**{'placeholder':'Cantidad de paginas','id':'page_count'})}}
+                    <br />
+                    {{book_form.genre.label(class='sr-only')}}
+                    {{book_form.genre(class='form-control',**{'placeholder':'Genero','id':'genre'})}}
+                    <br />
+                    {{book_form.author.label(class='sr-only')}}
+                    {{book_form.author(class='form-control',**{'placeholder':'Autor','id':'author'})}}
+                    <br />
+                    {{book_form.lang.label(class='sr-only')}}
+                    {{book_form.lang(class='form-control',**{'placeholder':'Lenguaje','id':'lang'})}}
+                    <br />
+                    {{book_form.image_url.label(class='sr-only')}}
+                    {{book_form.image_url(class='form-control',**{'placeholder':'Imagen (url)','id':'image_url'})}}
+                    <br /><br />
+                    <script type="text/javascript">
+
+                        const selectElement = document.getElementById('image_url');
+
+                        selectElement.addEventListener('change', (event) => {
+                            console.log('change');
+
+                            $("#image_book").attr("src", $('#image_url').val());
+                        });
+
+                        const selectElementTitle = document.getElementById('name');
+
+                        selectElementTitle.addEventListener('change', (event) => {
+                            console.log('change');
+                            document.getElementById('title_book').innerHTML = $('#name').val();
+
+                        });
+
+                        const selectElementDesc = document.getElementById('description');
+
+                        selectElementDesc.addEventListener('change', (event) => {
+                            console.log('change');
+                            document.getElementById('desc_book').innerHTML = $('#description').val();
+
+                        });
+                    </script>
+
+                    <!--<p class="mt-5 mb-3 text-muted">&copy; 2020</p>-->
+
+                </div>
+
+
+                <div id="card_book">
+                    <div class="card border-success mb-3" id="book" name="available-card" style="border-bottom: 6px solid #28a745!important">
+                        <img class="card-img-top" src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" id="image_book" alt="Card image cap">
+                        <br />
+
+
+                        <h5 class="card-title" id="title_book">Titulo</h5>
+                        <p class="card-text" id="desc_book">Descripcion</p>
+                        <br />
+                    </div>
+                </div>
+
+
+                {{book_form.submit(class='btn btn-lg btn-primary btn-block',**{'id':'btn-submit'})}}
+
+            </form>
+
         </div>
     </div>
 </div>
